--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.2.3
-beautifulsoup4==4.12.0
+Flask==2.2.5
 requests==2.31.0
-google-generativeai==0.1.0
-python-dotenv==0.21.1
+beautifulsoup4==4.12.3
+google-generativeai==0.3.2
+python-dotenv==1.0.1
+gunicorn==21.2.0
